<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="@dimen/dimen_x4_5">

        <TextView
            android:id="@+id/txt_general_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_step_1_tv_title"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_x4_5">

            <EditText
                android:id="@+id/et_shelter_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_step_1_et_shelter_name"
                android:singleLine="true"
                android:textSize="@dimen/text_size_17sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_shelter_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_x2_4">

            <com.tektonlabs.android.refugeapp.utils.ClickToSelectEditText
                android:id="@+id/s_shelter_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_arrow_drop_down"
                android:hint="@string/hint_shelter_type" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_institution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_x2_4">

            <com.tektonlabs.android.refugeapp.utils.ClickToSelectEditText
                android:id="@+id/sp_institution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_arrow_drop_down"
                android:hint="@string/hint_institution" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_emergency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_x2_4">

            <com.tektonlabs.android.refugeapp.utils.ClickToSelectEditText
                android:id="@+id/sp_emergency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_arrow_drop_down"
                android:hint="@string/hint_emergency" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_x2_4">

            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_room_black_24dp"
                android:gravity="center_vertical"
                android:hint="@string/form_step_1_et_direction"
                android:focusable="false"
                android:clickable="true"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</ScrollView>
