<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true">

    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_x4_5"
        android:background="@android:color/white"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <TextView
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/dimen_x4_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/infrastructure"/>

        <LinearLayout
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <EditText
                    android:imeOptions="actionNext"
                    android:maxLength="4"
                    android:nextFocusRight="@id/et_toilet"
                    android:inputType="number"
                    android:textSize="@dimen/text_size_17sp"
                    android:hint="@string/tent_number_hint"
                    android:id="@id/et_tents"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <EditText
                    android:imeOptions="actionNext"
                    android:maxLength="4"
                    android:nextFocusDown="@id/et_lavatory"
                    android:inputType="number"
                    android:textSize="@dimen/text_size_17sp"
                    android:hint="@string/toilet_number_hint"
                    android:id="@id/et_toilet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dimen_x2_4">

            <android.support.design.widget.TextInputLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <EditText
                    android:imeOptions="actionNext"
                    android:maxLength="4"
                    android:nextFocusRight="@id/et_showers"
                    android:inputType="number"
                    android:textSize="@dimen/text_size_17sp"
                    android:hint="@string/sink_number_hint"
                    android:id="@id/et_lavatory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <EditText
                    android:imeOptions="actionNext"
                    android:maxLength="4"
                    android:nextFocusDown="@id/et_water_tank"
                    android:inputType="number"
                    android:textSize="@dimen/text_size_17sp"
                    android:hint="@string/shower_number_hint"
                    android:id="@id/et_showers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dimen_x2_4">

            <android.support.design.widget.TextInputLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <EditText
                    android:imeOptions="actionNext"
                    android:maxLength="4"
                    android:nextFocusRight="@id/et_dumpsters"
                    android:inputType="number"
                    android:textSize="@dimen/text_size_17sp"
                    android:hint="@string/tank_number_hint"
                    android:id="@id/et_water_tank"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <EditText
                    android:imeOptions="actionNext"
                    android:maxLength="4"
                    android:nextFocusRight="@id/et_trash"
                    android:inputType="number"
                    android:textSize="@dimen/text_size_17sp"
                    android:hint="@string/trash_number_hint"
                    android:id="@id/et_dumpsters"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_x2_4">
            <EditText
                android:imeOptions="actionDone"
                android:maxLength="4"
                android:inputType="number"
                android:textSize="@dimen/text_size_17sp"
                android:hint="@string/points_number_hint"
                android:id="@id/et_trash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_floor_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_x2_4">

            <com.tektonlabs.android.refugeapp.utils.ClickToSelectEditText
                android:id="@+id/sp_floor_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_arrow_drop_down"
                android:hint="@string/hint_floor_type" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_roof"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_x2_4">

            <com.tektonlabs.android.refugeapp.utils.ClickToSelectEditText
                android:id="@+id/sp_roof"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_arrow_drop_down"
                android:hint="@string/hint_roof_type" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:textStyle="bold"
            android:layout_marginTop="@dimen/dimen_x4_5"
            android:layout_marginBottom="@dimen/dimen_x4_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Presencia de"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_presence_of"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
