<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@android:color/white"
        tools:context="com.tektonlabs.android.refugeapp.presentation.categories.CategoriesActivity">

        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:id="@+id/ll_categories"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/select_the_categories_you_want_to_complete" />


            <Button
                android:id="@+id/bt_select_all"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_x4_5"
                android:text="@string/select_all"
                android:textColor="@color/colorAccent" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_x2_5" />

            <Button
                android:visibility="gone"
                android:id="@+id/bt_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_x4_5"
                android:layout_marginBottom="@dimen/dimen_x4_5"
                android:background="@drawable/button_primary_background"
                android:elevation="@dimen/dimen_x4_5"
                android:paddingEnd="@dimen/dimen_x4_5"
                android:paddingStart="@dimen/dimen_x4_5"
                android:text="@string/continue_button"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_14sp"/>


        </LinearLayout>

        <include layout="@layout/empty_state_categories" />

        <ProgressBar
            android:id="@+id/v_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</ScrollView>
